todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: todo-image-claim
      containers:
        - name: todo-app
          image: todo-app:2.6
          imagePullPolicy: IfNotPresent

          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi

          ports:
            - name: http
              containerPort: 8000
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/files
